--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,12 @@
+@misc{feng2020optimal,
+      title={Optimal Machine Intelligence at the Edge of Chaos}, 
+      author={Ling Feng and Lin Zhang and Choy Heng Lai},
+      year={2020},
+      eprint={1909.05176},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 @ARTICLE{1986Natur.323.533R,
        author = {{Rumelhart}, David E. and {Hinton}, Geoffrey E. and {Williams}, Ronald J.},
         title = "{Learning representations by back-propagating errors}",
